--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools" >
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <application
+        android:requestLegacyExternalStorage="true"
         android:name=".SwipeApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
